[IMP] Feature #19437 - chnaged notes field char to text in contact, crm, & sales
(cherry picked from commit 654eb2f11284f1b269194a5ea0e2b547a3f6b268)

--- a/bista_contact/views/res_partner_views.xml
+++ b/bista_contact/views/res_partner_views.xml
@@ -74,7 +74,7 @@
                             <field name="source_notes"/>
                             <field name="referring_organization" domain="[('company_type', '=', 'company')]"/>
                             <field name="referal_source" domain="[('type', '=', 'contact'), ('id', 'child_of', referring_organization), ('id', '!=', referring_organization)]"/>
-                            <separator string="Products Purchase"/>
+                            <!-- <separator string="Products Purchase"/> -->
                         </group>
                     </group>
                 </page>
