--- a/bista_crm/views/crm_lead_views.xml
+++ b/bista_crm/views/crm_lead_views.xml
@@ -65,11 +65,9 @@
                 <page name="billing_info" string="Billing Info">
                     <group name="billing_info" string="Billing Info">
                         <group>
-                            <!--                        <field name="billing_address"/>-->
                             <field name="tax_exempt"/>
                         </group>
                         <group>
-                            <!-- <field name="payment_method" /> -->
                             <field name="payment_notes" />
                         </group>
                     </group>
@@ -90,7 +88,7 @@
                             <field name="accept_pallets"/>
                             <field name="has_loading_dock"/>
                             <field name="inside_delivery_req"/>
-                            <field name="shipping_notes"  style="word-wrap: break-word;max-height: 25px;"/>
+                            <field name="shipping_notes" />
                         </group>
                     </group>
                 </page>
@@ -100,13 +98,12 @@
                                widget="many2many_tags"/>
                         <field name="currency_id" invisible="1"/>
                         <field name="customization_cost"/>
-                        <field name="link_to_art_files" widget="url"/>
+                        <field name="link_to_art_files" />
                         <field name="artwork_status_id" options="{'no_open': True}"/>
                     </group>
                     <group>
                         <field name="journal_notes" />
                         <field name="journal_setup_fee"/>
-                        <!-- <field name="shipping_account" /> -->
                         <field name="death_type_id" options="{'no_open': True}"/>
                         <field name="existing_death_order"/>
                     </group>
@@ -131,7 +128,6 @@
                 <page name="product_info" string="Product Info">
                     <group>
                         <group name="product_info" string="Product Info">
-                            <!--<field name="deal_title"/>-->
                             <field name="pre_release"/>
                             <field name="product_use"/>
                             <field name="product_status_notes" />
