--- a/bista_sale/views/sale_templates.xml
+++ b/bista_sale/views/sale_templates.xml
@@ -118,10 +118,10 @@
                             <span t-field="sale_order.partner_shipping_id.external_company"/>
                         </t>
                     </div>
-                    <div t-field="sale_order.partner_invoice_id" t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}'/>
+                    <div t-field="sale_order.partner_shipping_id" t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}'/>
                 </t>
                 <t t-else="">
-                    <div t-field="sale_order.partner_invoice_id" t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
+                    <div t-field="sale_order.partner_shipping_id" t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
                 </t>
             </div>
         </div>
